Team  step marked coming soon until team is created

--- a/index.html
+++ b/index.html
@@ -445,13 +445,13 @@
       </div>
     </div>
 
-    <div class="onboard-step">
+    <div class="onboard-step" style="border-color:var(--green-dark);position:relative;">
       <div class="onboard-step-num">4</div>
       <div class="onboard-step-content">
-        <div class="onboard-step-title">Join Team $ET</div>
-        <div class="onboard-step-desc">On the Einstein@home website, go to <span style="color:var(--green)">Community → Teams</span> and search for <span style="color:var(--green)">$ET</span>. Join the team. Your computing credits count toward our crew's collective search for extraterrestrial signals.</div>
+        <div class="onboard-step-title">Join Team $ET <span style="font-size:8px;color:var(--green);background:rgba(57,255,20,0.1);padding:2px 8px;margin-left:8px;letter-spacing:2px;vertical-align:middle;">COMING SOON</span></div>
+        <div class="onboard-step-desc">Our official team on Einstein@home is being set up. Once live, search for <span style="color:var(--green)">$ET</span> in Community → Teams to join. Your credits will count toward the crew's collective search. For now, just completing steps 1–3 means you're already contributing to the search for ET.</div>
         <div class="onboard-step-links">
-          <a href="https://einsteinathome.org/team_search.php" target="_blank" class="onboard-link primary">→ Find Team $ET</a>
+          <a href="https://einsteinathome.org/community/teams" target="_blank" class="onboard-link">→ Browse teams</a>
         </div>
       </div>
     </div>
