Fix Einstein@home signup link to /join

--- a/index.html
+++ b/index.html
@@ -432,7 +432,7 @@
         <div class="onboard-step-title">Create an Einstein@home account</div>
         <div class="onboard-step-desc">Einstein@home uses your computer to search radio telescope data for pulsars, gravitational waves, and continuous signals from neutron stars. It's one of the most active SETI-adjacent projects in the world.</div>
         <div class="onboard-step-links">
-          <a href="https://einsteinathome.org/create_account_form.php" target="_blank" class="onboard-link primary">→ Sign up at einsteinathome.org</a>
+          <a href="https://einsteinathome.org/join" target="_blank" class="onboard-link primary">→ Sign up at einsteinathome.org</a>
         </div>
       </div>
     </div>
@@ -471,7 +471,7 @@
         einstein@home has discovered <span>90+ pulsars</span> using volunteer computers<br>
         every cycle of your CPU brings us closer to an answer
       </div>
-      <a href="https://einsteinathome.org/create_account_form.php" target="_blank" class="onboard-cta">ENLIST NOW</a>
+      <a href="https://einsteinathome.org/join" target="_blank" class="onboard-cta">ENLIST NOW</a>
     </div>
   </div>
 </div>
